-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.1
-
None
-
-
cdd0b0b86 (dev), 1d8184465 (6.10), ee9937de6 (6.9), db6fbcb54 (tqtc/lts-6.8)
When making a request over HTTP/2 that returns an error status code (e.g. 500), QNetworkReply::errorString() produces output like:
Error transferring https://api.example.com/ - server replied:
The message template assumes that a reason phrase is present. However, HTTP/2 and HTTP/3 do not carry a reason phrase (RFC 7540 §8.1.2.4), so the field is always empty. This leaves a confusing dangling "server replied:" with nothing after it.
Steps to Reproduce
- Create a simple QNetworkAccessManager GET request to an endpoint that returns HTTP/2 500 with no body.
- Connect to the finished() signal and call reply->errorString()
- Observe that the string ends with "server replied: " and nothing else.
Expected Result
errorString() should omit the "server replied:" part if the reason phrase is empty, or use a neutral fallback such as "server returned status 500".
Actual Result
Output contains "server replied:" with nothing after it.